<resources>
    <string name="app_name">AQ</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email">Enter E-mail</string>
    <string name="enter_password">Enter password</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Questions</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="enter_name">Enter your full name</string>
    <string name="enter_name_hint">Enter your full name:lastname firstname middlename</string>
    <string name="enter_nickname">Enter your nickname</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="ask_the_question">Ask the Question</string>
    <string name="wrong_email">Wrong E-mail!</string>
    <string name="wrong_name_format">Wrong name format!</string>
    <string name="different_passwords">Different passwords!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_title">Input main question</string>
    <string name="OK">OK</string>
    <string name="apply">Apply</string>
    <string name="add">Add</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passwordConfirmation">Password confirmation</string>
    <string name="birtdate">Birthdate</string>
    <string name="university">University</string>
    <string name="faculty">Faculty</string>
    <string name="speciality">Speciality</string>
    <string name="entranceDate">Entrance date</string>
    <string name="graduationDate">Graduation date</string>
    <string name="click_here">click here</string>
    <string name="from">От</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="project_url">https://pure-mesa-13823.herokuapp.com</string>
    <string name="remember_me">Remember me?</string>
    <string name="question_hint">Detailed explanation of the question.</string>
    <string name="change_password">Change password</string>
    <!-- Test strings -->
    <string name="test_nickname">\@nickname322</string>
    <string name="test_name">Бедный студент</string>
    <string name="test_date">20.10.16 19:30</string>
    <string name="test_title_of_question">Когда включат горячую воду в общежитии?</string>
    <string name="test_body_of_question">Это не возможно! 2 месяца нет воды. Соседи воняют. Бла Бла Бла. Текст. Текст. Текст. Текст. Текст.Текст.Текст.</string>

    <string-array name="image_ids">
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
        <item>@drawable/image_4</item>
        <item>@drawable/image_5</item>
        <item>@drawable/image_6</item>
        <item>@drawable/image_7</item>
        <item>@drawable/image_8</item>
        <item>@drawable/image_9</item>
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
        <item>@drawable/image_4</item>
        <item>@drawable/image_5</item>
        <item>@drawable/image_6</item>
        <item>@drawable/image_7</item>
        <item>@drawable/image_8</item>
        <item>@drawable/image_9</item>
    </string-array>

    <string-array name="category_images">
        <item>@drawable/image_1</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
