<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
  >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/bg_color" />

    </android.support.design.widget.AppBarLayout>
    <LinearLayout android:layout_height="match_parent"
        android:layout_marginTop="25px"
        android:layout_width="match_parent"
        android:background="@color/bg_color"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:gravity="top|center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:layout_width="370px"
            android:layout_height="200px"
            android:src="@drawable/aq_title"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_selector"
            android:padding="20px"
            android:paddingLeft="50px"
            android:layout_marginRight="20px"
            android:layout_marginLeft="20px"
            android:layout_marginTop="15px"
            android:hint="@string/enter_email"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20px"
            android:layout_marginRight="20px"
            android:layout_marginLeft="20px"
            android:background="@drawable/edit_text_selector"
            android:layout_marginTop="15px"
            android:hint="@string/enter_password"
            />
        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/log_in"
                android:background="@drawable/login_button_selector"
                android:textColor="@color/text_white"
                android:layout_margin="15px"/>
            <Button android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/sign_up"
                android:background="@drawable/login_button_selector"
                android:textColor="@color/text_white"
                android:layout_margin="15px"/>

        </TableRow>

    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>
