<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/titlePrefixProfileUui"
            android:gravity="center"
            android:textSize="@dimen/txt_medium"
            android:text="University info #"
            android:layout_weight="3"
            />
        <TextView
            android:id="@+id/titleContentProfileUui"
            android:gravity="center"
            android:textSize="@dimen/txt_medium"
            android:text="1"
            android:layout_weight="4"
            />
        <TextView
            android:id="@+id/titlePostfixProfileUui"
            android:gravity="center"
            android:textSize="@dimen/txt_medium"
            android:text=" of "
            android:layout_weight="4"
            />
        <TextView
            android:id="@+id/titleEndProfileUui"
            android:gravity="center"
            android:textSize="@dimen/txt_medium"
            android:text="10"
            android:layout_weight="4"
            />

        <Button
            android:id="@+id/btnAddUui"
            android:layout_weight="4"
            android:background="@color/green"
            android:text="+"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/university"
            android:layout_weight="3"
            android:textSize="14sp"
            android:textStyle="bold"
            android:id="@+id/textView2" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="10dp"
            android:id="@+id/university_sp"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faculty"
            android:layout_weight="3"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="10dp"
            android:id="@+id/faculty_sp"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speciality"
            android:layout_weight="3"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="10dp"
            android:id="@+id/speciality_sp" />

    </TableRow>

</LinearLayout>